# urbi

./: .automerge  .automerge_moves  .bootstrap.cfg  .cvsignore  .externals  .gdbinit  .gitattributes  .gitignore  .gitmodules  AUTHORS  CHANGELOG-Kernel  CMakeLists.txt  COPYRIGHT  ChangeLog  Doxyfile  GNUmakefile.in  INSTALL  KNOWN_BUGS  LICENSE  LICENSE-URBI-LANGUAGE  Makefile  Makefile.am  NEWS  README  TODO  bootstrap  bootstrap.cfg  buildnumber.php  buildversion.h  configure.ac  console.cc  doc.sh  lockable.h  qiproject.xml  tests-local.mk  ualias.cc  ualias.h  ubanner.cc  ubinary.cc  ubinary.h  (+51 more)
doc/: .gitignore  AUTHORS.txt  COMPONENTS.txt.in  Doxyfile.in  FAQ.txt  LICENSE.txt  Makefile.am  NEWS.txt  QUICK-START  QUICK-START.txt  README.txt  README.txt.in  RELEASE-NOTES.txt  REPORTING-BUGS  REPORTING-BUGS.txt  ROADMAP  THANKS.txt  TODO  beta-testers.txt  check.py  config.sty  config.sty.in  devblog-urbi-2.html  experiment.sty  faq.tex  getting-started.tex  gostai-report.cls  indexing.sty  installation.tex  introduction.tex  k1-to-k2.tex  licenses.tex  notation.tex  publish-latest  quick-start.txt  revision.sty  semantics-issues.org  test.u  tex2chk  urbi-faq.tex  (+8 more)
doc/devblog/: 2009-01-urbi-launch.txt  2009-02-lobby-visibility.txt  2009-03-uobject-all.txt  2009-03-urbi-sdk-2.html  2009-04-notifications-in-urbi.txt  2009-05-sync-async.txt  2009-06-void-vs-nil.txt  urbi-2.html  urbi-launch.txt
doc/document-aux/: README.txt
doc/guide/: abstract.tex  build.tex  faq.tex  guide.tex  guideline.tex  installation.tex  k1-to-k2.tex  k2-to-k3.tex  requirements.tex  requirements.tex.gen
doc/img/: compiler-compliance-level.eps  cube.eps  gostai-console.eps  gostai-editor.eps  gostai-head.eps  localizer-multidim.eps  localizer-multidim.sla  lrfh.eps  reference-frame.eps  ros-image-publisher.dot  ros-image-publisher.eps  select-import.eps  select-proj.eps  set_javalibrarypath.eps  spykee-flash-instructions.eps  spykee-flash-instructions.xcf  structure-tree-humanoid.dot  structure-tree-humanoid.eps  structure-tree-wheeled.dot  structure-tree-wheeled.eps  structure-tree.eps  turtlesim-tutorial.eps  urbi-sdk1x.eps  visual-wizard-1.eps  visual-wizard-2.eps  visual-wizard-3.eps
doc/installation/: installation.tex
doc/licenses/: libjpeg.txt
doc/naming/: naming-standard.tex
doc/share/: ChangeLog  README-lrde.bib  TODO
doc/specs/: .gitignore  Makefile  URBI.INI  abstract.tex  barrier.tex  binary.tex  boolean.tex  call-message.tex  callmessage.tex  channel.tex  code.tex  comparable.tex  container.tex  control.tex  date.tex  dictionary.tex  directory.tex  document-aux  duration.tex  enumerated.tex  enumeration.tex  event.tex  exception.tex  executable.tex  file.tex  finalizable.tex  float-limits.tex  float.tex  format-info.tex  formater.tex  formatinfo.tex  formatter.tex  function-profile.tex  global.tex  group.tex  hash.tex  indexing.sty  input-stream.tex  ioservice.tex  job.tex  (+66 more)
doc/tables/: abstract.tex  bibliography.tex  glossary.tex  grammar.tex  licenses.tex  notation.tex  release-notes.tex  tables.tex  urbiscript.bnf
doc/tests/: local.mk  test.u
doc/trajectories/: accel.eps  accel.pdftex_t  accel.utraj  cos-block.eps  cos-block.pdftex_t  cos-block.utraj  cos-freeze.eps  cos-freeze.pdftex_t  cos-freeze.utraj  cos-stop.eps  cos-stop.pdftex_t  cos-stop.utraj  cos.eps  cos.pdftex_t  cos.utraj  local.mk  plot.u  sin.eps  sin.pdftex_t  sin.utraj  smooth-continued.eps  smooth-continued.pdftex_t  smooth-continued.utraj  smooth-frozen.eps  smooth-frozen.pdftex_t  smooth-frozen.utraj  smooth.eps  smooth.pdftex_t  smooth.utraj  speed-adaptive.eps  speed-adaptive.pdftex_t  speed-adaptive.utraj  speed.eps  speed.pdftex_t  speed.utraj  time-adaptive.eps  time-adaptive.pdftex_t  time-adaptive.utraj  time.eps  time.pdftex_t  (+1 more)
doc/tutorial/: .gitignore  Makefile  abstract.tex  concurrent.tex  event.tex  first-steps.tex  flow.tex  functional.tex  functions.tex  getting-started.tex  import.tex  local.mk  object.tex  ros.tex  tutorial.tex  urbi-tutorial.tex  value.tex
doc/uobject/: TODO  abstract.tex  api-java.tex  api.tex  quick-start.tex  uobject.tex  use-cases.tex
modules/: .gitignore  Makefile.am  bootstrap  configure.ac
modules/algorithm/: md5
modules/robots/: p3dx
modules/system/: ros  ros-bridge
modules/urbi/: modules.u.in
sdk-remote/: .bootstrap.cfg  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL.openr  INSTALL.windows  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  bootstap  bootstrap  build-aux  configure  configure.ac  flags.mk  setenv.sh
sdk-remote/autom4te.cache/: output.0  requests  traces.0
sdk-remote/build-aux/: acx_pthread.m4  doxygen.mk  urbi-dirs.m4  urbi-doc.m4  urbi-openr.m4  urbi-pthread.m4  urbi-sdk.m4
sdk-remote/doc/: Doxyfile.in  Makefile.am  Makefile.in  liburbi.html  liburbi.htrml  liburbi.xml  local.mk  sdk-remote-java.dox.in  sdk-remote.dox.in
sdk-remote/include/: CMakeLists.txt  local.mk  uobject.h
sdk-remote/jpeg-6b/: Makefile.am  Makefile.win  jconfig.vc  jmorecfg.h  makefile.vc
sdk-remote/lib/: Makefile.am  Makefile.in
sdk-remote/msvc/: liburbi.sln
sdk-remote/sdk/: Makefile.am  Makefile.in  Makefile.module  Makefile.module.in  Makefile.param.in  config.h.in  eval_makefile.pl  install  local.mk  param.mk.in  uinstall  uinstall.in  umain.cc  umake-common  umake-engine  umake-java.in  umake-lib  umake-link.in  umake.in  urbi-engine.ac  (+3 more)
src/: .gitignore  Makefile.am  ast-dump.cc  console-server-options.cc  console-server-options.hh  console-server.cc  console-server.hh  console.cc  debug.cc  debug.hh  find-boost.cc  flavorable.hh  fwd.hh  kernconf.cc  kernel.mk  lockable.h  package-info.cc  package-info.hh  server-timer.cc  server-timer.hh  tag-info.cc  tag-info.hh  uast.hh  uasynccommand.cc  uasynccommand.h  uasynccommand.hh  uasyncregister.cc  uasyncregister.h  uasyncregister.hh  uatcandidate.cc  uatcandidate.h  uatcandidate.hh  ubanner.cc  ubanner.hh  ubinary.cc  ubinary.h  ubinary.hh  ubinder.cc  ubinder.hh  ubinder.hxx  (+83 more)
tests/: .gitignore  CMakeLists.txt  Makefile.am  README  check-file  test.u
(+2624 files in other folders)
